==> peakhunt/longan_nano/GD32VF103_Firmware_Library_V1.0.2/Examples/USBFS/USB_Device/Audio/Source/gd32vf103_audio_codec.c <==
#include "gd32vf103_audio_codec.h"
#define I2S_ENABLE_MASK                 (0x0400)
#define CODEC_RESET_DELAY               (0x4FFF)
    #define CODEC_STANDARD                 0x04
    #define I2S_STANDARD                   I2S_STD_PHILLIPS
    #define CODEC_STANDARD                 0x00
    #define I2S_STANDARD                   I2S_STD_MSB
    #define CODEC_STANDARD                 0x08
    #define I2S_STANDARD                   I2S_STD_LSB
#define CODEC_ADDRESS                      0x94  /* b00100111 */

uint32_t Codec_Init(uint16_t OutputDevice, uint8_t Volume, uint32_t AudioFreq)
{
    uint32_t counter = 0;

    /* Configure the Codec related IOs */
    Codec_GPIO_Init();

    /* Reset the Codec Registers */
    Codec_Reset();

    /* Initialize the Control interface of the Audio Codec */
    Codec_CtrlInterface_Init();

    /* Keep Codec powered OFF */
    counter += Codec_WriteRegister(0x02, 0x01);

    switch (OutputDevice)
    {
        case OUTPUT_DEVICE_SPEAKER:
            counter += Codec_WriteRegister(0x04, 0xFA); /* SPK always ON & HP always OFF */
            OutputDev = 0xFA;
            break;

        case OUTPUT_DEVICE_HEADPHONE:
            counter += Codec_WriteRegister(0x04, 0xAF); /* SPK always OFF & HP always ON */
            OutputDev = 0xAF;
            break;

        case OUTPUT_DEVICE_BOTH:
            counter += Codec_WriteRegister(0x04, 0xAA); /* SPK always ON & HP always ON */
            OutputDev = 0xAA;
            break;

        case OUTPUT_DEVICE_AUTO:
            counter += Codec_WriteRegister(0x04, 0x05); /* Detect the HP or the SPK automatically */
            OutputDev = 0x05;
            break;

        default:
            counter += Codec_WriteRegister(0x04, 0x05); /* Detect the HP or the SPK automatically */
            OutputDev = 0x05;
            break;
    }

    /* Clock configuration: Auto detection */  
    counter += Codec_WriteRegister(0x05, 0x81);

    /* Set the Slave Mode and the audio Standard */  
    counter += Codec_WriteRegister(0x06, CODEC_STANDARD);

    /* Set the Master volume */
    Codec_VolumeCtrl(Volume);

    /* If the Speaker is enabled, set the Mono mode and volume attenuation level */
    if (OutputDevice != OUTPUT_DEVICE_HEADPHONE)
    {
        /* Set the Speaker Mono mode */
        counter += Codec_WriteRegister(0x0F , 0x06);

        /* Set the Speaker attenuation level */
        counter += Codec_WriteRegister(0x24, 0x00);
        counter += Codec_WriteRegister(0x25, 0x00);
    }

    /* Power on the Codec */
    counter += Codec_WriteRegister(0x02, 0x9E);

    /* Additional configuration for the CODEC. These configurations are done to reduce
       the time needed for the Codec to power off. If these configurations are removed,
       then a long delay should be added between powering off the Codec and switching
       off the I2S peripheral MCLK clock (which is the operating clock for Codec).
       If this delay is not inserted, then the codec will not shut down propoerly and
       it results in high noise after shut down. */

    /* Disable the analog soft ramp */
    counter += Codec_WriteRegister(0x0A, 0x00);

    /* Disable the digital soft ramp */
    counter += Codec_WriteRegister(0x0E, 0x04);

    /* Disable the limiter attack level */
    counter += Codec_WriteRegister(0x27, 0x00);

    /* Adjust Bass and Treble levels */
    counter += Codec_WriteRegister(0x1F, 0x0F);

    /* Adjust PCM volume level */
    counter += Codec_WriteRegister(0x1A, 0x0A);
    counter += Codec_WriteRegister(0x1B, 0x0A);

    /* Configure the I2S peripheral */
    Codec_AudioInterface_Init(AudioFreq);

    /* Return communication control value */
    return counter;
}

static void Codec_AudioInterface_DeInit(void)
{
    /* Disable the CODEC_I2S peripheral (in case it hasn't already been disabled) */
    i2s_disable(CODEC_I2S);

    /* Deinitialize the CODEC_I2S peripheral */
    spi_i2s_deinit(CODEC_I2S);

    /* Disable the CODEC_I2S peripheral clock */
    rcu_periph_clock_disable(CODEC_I2S_CLK);
}

static void Codec_GPIO_Init(void)
{
    /* enable the clock */
    rcu_periph_clock_enable(RCU_AF);
    rcu_periph_clock_enable(CODEC_I2S_GPIO1_CLOCK);
    rcu_periph_clock_enable(CODEC_I2S_GPIO2_CLOCK);
    rcu_periph_clock_enable(CODEC_SPI_CLK);

    /* CODEC_I2C SCL and SDA pins configuration */
    gpio_init(CODEC_SPI_GPIO, GPIO_MODE_AF_OD, GPIO_OSPEED_50MHZ, CODEC_SPI_SCL_PIN | CODEC_SPI_SDA_PIN);

    /* CODEC_I2S pins configuraiton: WS, SCK and SD pins */
    gpio_init(CODEC_I2S_GPIO, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, CODEC_I2S_WS_PIN | CODEC_I2S_SCK_PIN | CODEC_I2S_SD_PIN);

#ifdef CODEC_MCLK_ENABLED
    /* CODEC_I2S pins configuraiton: MCK pin */
    gpio_init(CODEC_I2S_MCK_GPIO, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, CODEC_I2S_MCK_PIN);
#endif /* CODEC_MCLK_ENABLED */
}

static void Codec_GPIO_DeInit(void)
{
    /* Deinitialize all the GPIOs used by the driver (EXCEPT the I2C IOs since 
     they are used by the IOExpander as well) */
    gpio_init(CODEC_I2S_GPIO, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, CODEC_I2S_WS_PIN | CODEC_I2S_SCK_PIN | CODEC_I2S_SD_PIN);

#ifdef CODEC_MCLK_ENABLED
    /* CODEC_I2S pins deinitialization: MCK pin */
    gpio_init(CODEC_I2S_MCK_GPIO, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, CODEC_I2S_MCK_PIN);
#endif /* CODEC_MCLK_ENABLED */
}

void Audio_MAL_DeInit(void)  
{
    /* Disable the DMA Channel before the deinit */
    dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Dinitialize the DMA Channel */
    dma_deinit(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* The DMA clock is not disabled, since it can be used by other streams */
}

void Audio_MAL_Play(uint32_t Addr, uint32_t Size)
{
    /* Enable the I2S DMA Stream*/
    dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Clear the Interrupt flag */
    dma_interrupt_flag_clear(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, DMA_INT_FLAG_FTF);

    /* Configure the buffer address and size */
    DMA_InitStructure.memory_addr = (uint32_t)Addr;
    DMA_InitStructure.number = (uint32_t)(Size*2);

    /* Configure the DMA Stream with the new parameters */
    dma_init(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, &DMA_InitStructure);

    /* Enable the I2S DMA Stream*/
    dma_channel_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* If the I2S peripheral is still not enabled, enable it */
    if ((SPI_I2SCTL(CODEC_I2S) & I2S_ENABLE_MASK) == 0)
    {
        i2s_enable(CODEC_I2S);
    }
}

void Audio_MAL_PauseResume(uint32_t Cmd, uint32_t Addr, uint32_t Size)
{
    /* Pause the audio file playing */
    if (Cmd == AUDIO_PAUSE)
    {
        /* Stop the current DMA request by resetting the I2S cell */
        Codec_AudioInterface_DeInit();

        /* Re-configure the I2S interface for the next resume operation */
        Codec_AudioInterface_Init(I2S_AudioFreq);

        /* Disable the DMA Stream */
        dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

        /* Clear the Interrupt flag */
        dma_flag_clear(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, AUDIO_MAL_DMA_FLAG_ALL);
    }
    else /* AUDIO_RESUME */
    {
        /* Configure the buffer address and size */
        DMA_InitStructure.memory_addr = (uint32_t)Addr;
        DMA_InitStructure.number = (uint32_t)(Size*2);

        /* Configure the DMA Stream with the new parameters */
        dma_init(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, &DMA_InitStructure);

        /* Enable the I2S DMA Stream*/
        dma_channel_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

        /* If the I2S peripheral is still not enabled, enable it */
        if ((SPI_I2SCTL(CODEC_I2S) & I2S_ENABLE_MASK) == 0)
        {
            i2s_enable(CODEC_I2S);
        }
    }
}
