==> PhanLeSon03/Mic_Array/For_Linux/STM32746G/Applications/Audio/Mic_Array/Src/audio_codec.c <==
#include "audio_codec.h"
#include "stm32746g_discovery.h"
#include "stm32f7xx_hal_i2s.h"
#include "audio.h"
#include "main.h"
#define SPI_I2S_DMAReq_Tx               ((uint16_t)0x0002)
#define SPI_I2S_DMAReq_Rx               ((uint16_t)0x0001)
#define I2S_ENABLE_MASK                 0x0400
#define CODEC_RESET_DELAY               0x4FFF
#define CODEC_ADDRESS                   0x94
#define CODEC_ADDRESS_R                   0x95

static uint32_t Codec_Init(uint16_t OutputDevice, uint8_t Vol, uint32_t AudioFreq)
{
  uint32_t counter = 0; 
  //uint32_t stReadReg;

//sop1hc: removed on 22 June 2016, since do not install CS43L22 in this version 

#if 0
  /* Configure the Codec related IOs */
  Codec_GPIO_Init();   //only reset Pin configuration
  
  /* Reset the Codec Registers */
  Codec_Reset(); //  OFF ON the oin reset

  /* Initialize the Control interface of the Audio Codec */
  Codec_CtrlInterface_Init();     // I2C1 pin configuration

  //HAL_I2C_IsDeviceReady(&hi2c1, CODEC_ADDRESS, 20, 1000);
  
  /* Keep Codec powered OFF */
  counter += Codec_WriteRegister(0x02, 0x01);  

  //1. Write 0x99 to register 0x00.
  counter += Codec_WriteRegister(0x00, 0x99); 
  //2. Write 0x80 to register 0x47.
  counter += Codec_WriteRegister(0x47, 0x08); 

  //3. Write ?1?b to bit 7 in register 0x32. 
  stReadReg = Codec_ReadRegister(0x32);
  counter += Codec_WriteRegister(0x32, (uint8_t)(0x40|stReadReg)); 
  //4. Write ?0?b to bit 7 in register 0x32. 
    counter += Codec_WriteRegister(0x32, (uint8_t)(0xBF&stReadReg)); 
  //5. Write 0x00 to register 0x00.
    counter += Codec_WriteRegister(0x00, 0x00); 
  
  counter += Codec_WriteRegister(0x04, 0xAF); /* SPK always OFF & HP always ON */
  OutputDev = 0xAF;
  

  
  /* Clock configuration: Auto detection */  
  counter += Codec_WriteRegister(0x05, 0x81);//0x81
  //AUTO SPEED1 SPEED0 32k_GROUP VIDEOCLK RATIO1 RATIO0 MCLKDIV2
  //
  /* Set the Slave Mode and the audio Standard */  
  counter += Codec_WriteRegister(0x06, 0x0B);//CODEC_STANDARD 0x0B
  //M/S INV_SCLK Reserved DSP DACDIF1 DACDIF0 AWL1 AWL0  
  //DACDIF[1:0]: 10 -> Right Justified
  //AWL[1:0]: 11      -> 16-bit data
      
  /* Set the Master volume */
  Codec_VolumeCtrl(Vol);
  
  /* Power on the Codec */
  counter += Codec_WriteRegister(0x02, 0x9E);  
  
  /* Additional configuration for the CODEC. These configurations are done to reduce
      the time needed for the Codec to power off. If these configurations are removed, 
      then a long delay should be added between powering off the Codec and switching 
      off the I2S peripheral MCLK clock (which is the operating clock for Codec).
      If this delay is not inserted, then the codec will not shut down properly and
      it results in high noise after shut down. */
  
  /* Disable the analog soft ramp */
  counter += Codec_WriteRegister(0x0A, 0x00);

	/* Disable the digital soft ramp */
	//counter += Codec_WriteRegister(0x0E, 0x04);

  /* Disable the limiter attack level */
  counter += Codec_WriteRegister(0x27, 0x00);
  /* Adjust Bass and Treble levels */
  counter += Codec_WriteRegister(0x1F, 0x0F);
  /* Adjust PCM volume level */
  counter += Codec_WriteRegister(0x1A, 0x0A);
  counter += Codec_WriteRegister(0x1B, 0x0A);

#endif

#if 0
	  for (uint8_t i=0x00;i<=0x34;i++)
	  {
		   uint8_t test;
			test = Codec_ReadRegister(i);
			sprintf((char *)pUARTBuf,"REG[%x]:VAL[%x]\r\n",i,test);
			while(HAL_UART_Transmit(&huart3,pUARTBuf,30,1000));
	  }
#endif

  //codec_sendBeep();
  /* Configure the I2S peripheral */
  Codec_AudioInterface_Init(AudioFreq);  //I2S3 is using

  /* Return communication control value */
  return counter;  
}

static void Codec_AudioInterface_DeInit(void)
{
  /* Disable the CODEC_I2S peripheral (in case it hasn't already been disabled) */
  //I2S_Cmd(CODEC_I2S, DISABLE);
  __HAL_I2S_DISABLE(&hi2s3);
  /* Deinitialize the CODEC_I2S peripheral */
  SPI_I2S_DeInit(CODEC_I2S);
  
  /* Disable the CODEC_I2S peripheral clock */
  //RCC_APB1PeriphClockCmd(CODEC_I2S_CLK, DISABLE); 
  __HAL_RCC_SPI3_CLK_DISABLE();
}

static void Codec_GPIO_Init(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  
  __GPIOD_CLK_ENABLE();
  
  /* Audio reset pin configuration -------------------------------------------------*/
  GPIO_InitStructure.Pin = AUDIO_RESET_PIN; 
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;//GPIO_Mode_OUT;
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;//GPIO_Speed_50MHz;
  GPIO_InitStructure.Pull  = GPIO_NOPULL ;//GPIO_PuPd_NOPULL;
   
  HAL_GPIO_Init(AUDIO_RESET_GPIO, &GPIO_InitStructure);    
  
}

static void Codec_GPIO_DeInit(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  
  GPIO_InitStructure.Pin = CODEC_I2S_SCK_PIN | CODEC_I2S_SD_PIN; 
  GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
  GPIO_InitStructure.Speed = GPIO_SPEED_LOW;
  GPIO_InitStructure.Pull = GPIO_NOPULL;
  HAL_GPIO_Init(CODEC_I2S_GPIO, &GPIO_InitStructure);
      
  GPIO_InitStructure.Pin = CODEC_I2S_WS_PIN ;
  HAL_GPIO_Init(CODEC_I2S_WS_GPIO, &GPIO_InitStructure); 
  
#ifdef CODEC_MCLK_ENABLED
  GPIO_InitStructure.Pin = CODEC_I2S_MCK_PIN; 
  HAL_GPIO_Init(CODEC_I2S_MCK_GPIO, &GPIO_InitStructure); 
#endif /* CODEC_MCLK_ENABLED */    
}

static void Audio_MAL_DeInit(void)  
{   
#if defined(AUDIO_MAL_DMA_IT_TC_EN) || defined(AUDIO_MAL_DMA_IT_HT_EN) || defined(AUDIO_MAL_DMA_IT_TE_EN)
  //NVIC_InitTypeDef NVIC_InitStructure;  
  
  /* Deinitialize the NVIC interrupt for the I2S DMA Stream */
  //NVIC_InitStructure.NVIC_IRQChannel = AUDIO_I2S_DMA_IRQ;
  //NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = AUDIO_IRQ_PREPRIO;
  //NVIC_InitStructure.NVIC_IRQChannelSubPriority = AUDIO_IRQ_SUBRIO;
  //NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
  //NVIC_Init(&NVIC_InitStructure);  
   HAL_NVIC_DisableIRQ(SPI3_IRQn); 
#endif 
  
  /* Disable the DMA stream before the deinit */
  HAL_NVIC_DisableIRQ(DMA1_Stream7_IRQn); 
  HAL_NVIC_DisableIRQ(SPI3_IRQn); 
  
}

void Audio_MAL_Play(uint32_t Addr, uint16_t Size)
{
   //HAL_I2S_Transmit_DMA(&hi2s3,Addr,(uint16_t)Size/2);  
   /* Configure the source, destination address and the data length */
    //DMA_SetConfig(&DmaHandle,(uint32_t)&SPI3->DR , (uint32_t)Addr, Size/2);
      /* Configure DMA Stream destination address */
   /* Clear DBM bit */

      /* Enable the Peripheral */
  __HAL_DMA_DISABLE(&DmaHandle);
   DmaHandle.Instance->CR &= (uint32_t)(~DMA_SxCR_DBM);
	 
   /* Configure DMA Stream data length */
   DmaHandle.Instance->NDTR = Size/2;


   DmaHandle.Instance->PAR = (uint32_t)&SPI3->DR;
    /* Configure DMA Stream source address */
    DmaHandle.Instance->M0AR = (uint32_t)Addr;
    DmaHandle.Instance->M1AR = (uint32_t)Addr;
    /* Enable Tx DMA Request */  
    hi2s3.Instance->CR2 |= SPI_CR2_TXDMAEN;
  /* Enable the transfer complete interrupt */
   __HAL_DMA_ENABLE_IT(&DmaHandle, DMA_IT_TC);
 
 /* Enable the Peripheral */
  __HAL_DMA_ENABLE(&DmaHandle);

   
   /* Check if the I2S is already enabled */ 
   if((hi2s3.Instance->I2SCFGR &SPI_I2SCFGR_I2SE) != SPI_I2SCFGR_I2SE)
   {
   	 /* Enable I2S peripheral */	
   	 __HAL_I2S_ENABLE(&hi2s3);
   }
	   

     /* Process Unlocked */
    __HAL_UNLOCK(&hi2s3);


}

static void Audio_MAL_PauseResume(uint32_t Cmd, uint32_t Addr)
{
  /* Pause the audio file playing */
  if (Cmd == AUDIO_PAUSE)
  {   
    /* Disable the I2S DMA request */
    SPI_I2S_DMACmd(CODEC_I2S, SPI_I2S_DMAReq_Tx, DISABLE);

    /* Pause the I2S DMA Stream 
        Note. For the STM32F40x devices, the DMA implements a pause feature, 
              by disabling the stream, all configuration is preserved and data 
              transfer is paused till the next enable of the stream.
              This feature is not available on STM32F40x devices. */
    DMA_Cmd(AUDIO_I2S_DMA_STREAM, DISABLE);
  }
  else /* AUDIO_RESUME */
  {
    /* Enable the I2S DMA request */
    SPI_I2S_DMACmd(CODEC_I2S, SPI_I2S_DMAReq_Tx, ENABLE);
  
    /* Resume the I2S DMA Stream 
        Note. For the STM32F40x devices, the DMA implements a pause feature, 
              by disabling the stream, all configuration is preserved and data 
              transfer is paused till the next enable of the stream.
              This feature is not available on STM32F40x devices. */
    DMA_Cmd(AUDIO_I2S_DMA_STREAM, ENABLE);
    
    /* If the I2S peripheral is still not enabled, enable it */
    if ((CODEC_I2S->I2SCFGR & I2S_ENABLE_MASK) == 0)
    {
      I2S_Cmd(CODEC_I2S, ENABLE);
    }    
  } 
}
